fix: add some styles to fix some layout problems

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,13 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
 }
 
 .main {
   position: relative;
-  min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
   display: flex;
@@ -12,7 +15,7 @@
   justify-content: center;
   align-items: center;
   max-width: 65rem;
-  margin: 0 auto;
+  width: 100%;
 }
 
 .containerMoreLinks {
